docs: generalize deployment architecture to be tech-agnostic
Updates `Deployment.md` to remove hardcoded references to the Java + Spring Boot 3.4 + JDK 17 technology stack, making the application tier and CI/CD optimization strategies broadly applicable to any enterprise framework (e.g., Node.js, Go).

Changes included:
- Updated the Overview to reflect a generalized enterprise infrastructure deployment plan.
- Updated the Mermaid `Deployment Architecture Diagram` to rename "Spring Boot 节点" to "核心业务应用节点".
- Updated `3.2 核心应用计算区` to encompass any runtime environment (JVM, V8, Go Runtime), establishing a universal vCPU to RAM ratio of 1:2 or 1:4.
- Rewrote `4.2` from "Spring Boot Native Image Optimizations" to "应用容器化构建与部署安全优化", focusing on universal Docker best practices like Multi-stage builds, Distroless/Alpine base images, Non-root execution, and Layer caching.

Co-authored-by: YouUWd <3152101+YouUWd@users.noreply.github.com>